--- a/Controls/src/sample/sample.fxml
+++ b/Controls/src/sample/sample.fxml
@@ -1,6 +1,14 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.image.Image?>
 <GridPane fx:controller="sample.Controller"
           xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
-    <Button GridPane.rowIndex="0" GridPane.columnIndex="0" text="Click Me"/>
+    <Button GridPane.rowIndex="0" GridPane.columnIndex="0" text="Click Me">
+            <graphic>
+                <ImageView>
+                    <Image url="@/toolbarButtonGraphics/general"/>
+                </ImageView>
+            </graphic>
+    </Button>
 </GridPane>
