--- a/MySampleProject/src/com/Dinesh/toDoList/sample.fxml
+++ b/MySampleProject/src/com/Dinesh/toDoList/sample.fxml
@@ -1,14 +1,47 @@
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.layout.GridPane?>
-
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
-<GridPane fx:controller="com.Dinesh.toDoList.Controller"
-          xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.SeparatorMenuItem?>
+<BorderPane fx:id="mainBorderPain" fx:controller="com.Dinesh.toDoList.Controller"
+            xmlns:fx="http://javafx.com/fxml">
+    <top>
+        <MenuBar>
+            <Menu text="File">
+                <items>
+                    <MenuItem text="New" onAction="#showNewItemDialog"/>
+                    <SeparatorMenuItem/>
+                    <MenuItem text="Exit"/>
+                </items>
+            </Menu>
+        </MenuBar>
+    </top>
     <left>
-        <ListView>
-
+        <ListView fx:id="todoListView" onMouseClicked="#handleClickListView">
         </ListView>
     </left>
-</GridPane>
+    <center>
+        <VBox style="-fx-background-color: lightblue">
+            <TextArea fx:id="ListDescription" VBox.vgrow="ALWAYS"/>
+            <HBox>
+                <Label text="Due: " fx:id="Date">
+                    <font>
+                        <Font name="Times New Roman bold" size="20"/>
+                    </font>
+                </Label>
+                <Label fx:id="DeadLineLabel" style="-fx-background-color: lightblue;">
+                    <font>
+                        <Font name="Times New Roman bold" size="20"/>
+                    </font>
+                </Label>
+            </HBox>
+        </VBox>
+    </center>
+
+</BorderPane>
